k8s_manifests/user_management.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ivis-user-management
  labels:
    app: ivis-user-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ivis-user-management
  template:
    metadata:
      labels:
        app: ivis-user-management
    spec:
      nodeSelector:
        env: dev1v2
      containers:
      - name: ivis-user-management
        image: manojsai5855/ivis-user-management:new9
        ports:
        - name: usrmngmt-port
          containerPort: 8002
