k8s_manifests/cloud_gateway_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ivis-cloud-gateway-service
spec:
  type: NodePort
  selector:
    app: ivis-cloud-gateway
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30003 # Set the desired NodePort number
