k8s_manifests/config_management_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ivis-config-management-service
spec:
  type: ClusterIP
  selector:
    app: ivis-config-management
  ports:
    - protocol: TCP
      port: 8099
      targetPort: 8099
      #nodePort: 30003 # Set the desired NodePort number
