k8s_manifests/config_properties_server_service.yml
apiVersion: v1
kind: Service
metadata:
  name: ivis-config-properties-service
spec:
  type: NodePort
  selector:
    app: ivis-config-properties-server
  ports:
    - protocol: TCP
      port: 6666
      targetPort: 6666
      # Set the desired NodePort number
