k8s_manifests/monitoring_config_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ivis-monitoring-config-service
spec:
  type: ClusterIP
  selector:
    app: ivis-monitoring-config
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
      #nodePort: 30001 # Set the desired NodePort number
