k8s_manifests/service_registry_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ivis-service-registry-service
spec:
  type: NodePort
  selector:
    app: ivis-service-registry
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
      nodePort: 30002 # Set the desired NodePort number
