k8s_manifests/web_app_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ivis-web-app-service
spec:
  type: NodePort
  selector:
    app: ivis-web-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001 # Set the desired NodePort number
